err/enhance-djpro-tpl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/app_template'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app'...
Compiling './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app/authenticate.py'...
***   File "./lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app/authenticate.py", line 103
    except AuthenticationException, e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app/authorize.py'...
***   File "./lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app/authorize.py", line 141
    except AuthorizationException, e:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app/lib'...
Compiling './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app/token.py'...
***   File "./lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/oauth2app/token.py", line 159
    except AccessTokenException, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/contrib'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/contrib/contenttypes'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/contrib/gis'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/management'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/management/commands'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/migrations'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/south_migrations'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/libs/tastypie/utils'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/project_name'...
Compiling './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/project_name/settings.py'...
***   File "./lib/python3.5/site-packages/enhance_djpro_tpl/project_template/project_name/settings.py", line 247
    print u'''
        项目根目录缺少环境标志文件(server_tag_{ENV})
        ENV:
            local: 本地
            online: 生产环境
            dev: 开发调试环境
            release: release环境
        注：也可根据个人需求定制不同环境
    '''
              
                                       
            
                     
                        
                       
                              
                        
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/scripts'...
Compiling './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/scripts/__init__.py'...
***   File "./lib/python3.5/site-packages/enhance_djpro_tpl/project_template/scripts/__init__.py", line 8
    from {{ project_name }}.settings import *
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/scripts/check_env.py'...
***   File "./lib/python3.5/site-packages/enhance_djpro_tpl/project_template/scripts/check_env.py", line 8
    from {{ project_name }}.settings import *
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/utils'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/utils/decorators'...
Compiling './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/utils/decorators/preprocess.py'...
***   File "./lib/python3.5/site-packages/enhance_djpro_tpl/project_template/utils/decorators/preprocess.py", line 3
    from {{ project_name }}.settings import logger
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/utils/helpers'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/utils/management'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl/project_template/utils/management/commands'...
Listing './lib/python3.5/site-packages/enhance_djpro_tpl-0.0.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
